Attempts at fixing the word wrap

--- a/styles/custom.css
+++ b/styles/custom.css
@@ -321,6 +321,6 @@ li {
    display:none;
 }
 
-code {
-    max-width: 300px;
+#card-ltf-fields {
+    word-wrap: break-word;
 }
